fixed whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,26 @@
-html{
-
+html {
   background-color: #7765E3;
   background-image: url('background7.jpg');
-  background-position:top;
+  background-position: top;
   background-repeat: no-repeat;
-  opacity:0.9;
+  opacity: 0.9;
 }
 
-header{
+/* header styles */
+
+header {
   font-weight: 200;
-  margin:0px;
-  color:#fff;
+  margin: 0px;
+  color: #fff;
   background-color: #080708;
   box-shadow: 0px 10px 20px #000;
   background-size: 40%;
   background-repeat: no-repeat;
   text-align: center;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
+
 /*.bigContainer{
   background-image: url('background2.jpg');
   background-size:90%;
@@ -26,153 +28,137 @@ header{
   left: 200;
 }*/
 
-h1{
-  text-align:center;
-}
-
-.inputsSection{
+header h1 {
   text-align: center;
-  padding:1em;
+}
+.inputsSection {
+  text-align: center;
+  padding: 1em;
   box-shadow: 0px 10px 15px #363636;
   background-size: 60%;
   background-color: #7765E3;
   box-shadow: 0px 10px 20px #000;
 }
-
-.durationInput{
-  padding:10px;
-  font:25px;
-  padding:1em;
-  color:#fff;
-  text-shadow:2px 2px #363636;
+.durationInput {
+  padding: 10px;
+  font: 25px;
+  padding: 1em;
+  color: #fff;
+  text-shadow: 2px 2px #363636;
 }
-
-
-
-.submit{
-  color:black;
+.submit {
+  color: black;
 }
-
-.focusPoint{
-  padding:1em;
-  color:#fff;
-  text-shadow:2px 2px #363636;
+.focusPoint {
+  padding: 1em;
+  color: #fff;
+  text-shadow: 2px 2px #363636;
 }
-
-
-
-.container{
-  position:relative;
-  z-index:-1;
+.container {
+  position: relative;
+  z-index: -1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.whenEnd{
+.whenEnd {
   text-align: center;
-  padding:0;
+  padding: 0;
+}
+.whatIsKoan {
+  padding: 1em;
+}
+.whatIsKoan:hover {
+  color: #f0a806;
 }
 
-.whatIsKoan{
-  padding:1em;
-}
-
-.whatIsKoan:hover{
-  color:#f0a806;
-}
 /*button styling */
-.start{
-  color:#fff;
-  background-color:#000;
-  border-radius:50%;
-  padding:5px;
-  width:140px;
+
+.start {
+  color: #fff;
+  background-color: #000;
+  border-radius: 50%;
+  padding: 5px;
+  width: 140px;
   box-shadow: 0px 10px 20px #000;
 }
-
-.start:hover{
-  text-shadow:0px 2px 2px #ff0000;
+.start:hover {
+  text-shadow: 0px 2px 2px #ff0000;
 }
-
-.set{
-  color:#fff;
-  background-color:#000;
-  border-radius:50%;
-  padding:5px;
-  width:130px;
+.set {
+  color: #fff;
+  background-color: #000;
+  border-radius: 50%;
+  padding: 5px;
+  width: 130px;
   box-shadow: 0px 10px 20px #000;
 }
-
-.set:hover{
-  text-shadow:0px 2px 2px #ff0000;
+.set:hover {
+  text-shadow: 0px 2px 2px #ff0000;
 }
-
-.submit{
-  color:#fff;
-  background-color:#000;
-  border-radius:50%;
-  padding:5px;
-  width:130px;
+.submit {
+  color: #fff;
+  background-color: #000;
+  border-radius: 50%;
+  padding: 5px;
+  width: 130px;
   box-shadow: 0px 10px 20px #000;
 }
-
-.submit:hover{
-  text-shadow:0px 2px 2px #ff0000;
+.submit:hover {
+  text-shadow: 0px 2px 2px #ff0000;
 }
 
 /*Zen Circle styling */
 
-.zen{
-  display:block;
-  left:50%;
+.zen {
+  display: block;
+  left: 50%;
   right: 50%;
-  width:500px;
-  height:500px;
-  border-radius:50%;
-  font-size:10px;
-  text-shadow:5px 5px #ff0000;
-  color:#000;
-  text-align:center;
-  background-image:linear-gradient(to top, red, yellow);
-  opacity:0.96;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  font-size: 10px;
+  text-shadow: 5px 5px #ff0000;
+  color: #000;
+  text-align: center;
+  background-image: linear-gradient(to top, red, yellow);
+  opacity: 0.96;
   box-shadow: 0px 10px 20px #000;
-  padding:1em;
-  margin-bottom:2em;
+  padding: 1em;
+  margin-bottom: 2em;
 }
 
 /* styling for koans and quote */
 
-.zenDisplay{
-  color:black;
-  text-shadow:2px 2px #ff0000;
-  font-size:20px;
-  height:500px;
-  padding:6em;
-  border-radius:50%;
+.zenDisplay {
+  color: black;
+  text-shadow: 2px 2px #ff0000;
+  font-size: 20px;
+  height: 500px;
+  padding: 6em;
+  border-radius: 50%;
 }
-
-.bigContainer{
+.bigContainer {
   background-color: #7765E3;
-  opacity:0.9;
+  opacity: 0.9;
   box-shadow: 0px 10px 20px #000;
 }
 
 /* question styling */
 
-.durationInputCaption{
-  padding:1em;
+.durationInputCaption {
+  padding: 1em;
 }
-
-.focusPointCaption{
-  padding:1em;
+.focusPointCaption {
+  padding: 1em;
 }
 
 /* number input styling */
 
-.durationControl{
-  color:#000;
-  width:100px;
+.durationControl {
+  display: inline;
+  color: #000;
+  width: 100px;
   appearance: none;
   padding: 2px 30px 2px 2px;
   border: none;
@@ -180,9 +166,10 @@ h1{
 
 /* styling for select box*/
 
-.selectFocus{
-  color:#000;
-  width:150px;
+.selectFocus {
+  display: inline;
+  color: #000;
+  width: 150px;
   appearance: none;
   padding: 2px 30px 2px 2px;
   border: none;
@@ -195,10 +182,10 @@ h1{
     border: none;
 }*/
 
-
-footer{
+footer {
   text-align: center;
-  color:#fff;
-  padding:1em;
+  color: #fff;
+  padding: 1em;
 }
+
 /*# sourceMappingURL=style.css.map */
